--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,10 +3,13 @@ FROM node:18
 WORKDIR /app
 
 COPY package*.json ./
+COPY tsconfig.json ./
 
 RUN npm install
 
-COPY . .
+COPY src ./src
+
+RUN npm run build
 
 EXPOSE 3000
 
