--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "ts-node-dev --respawn --poll --transpile-only src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
-
   "author": "",
   "license": "ISC",
   "description": "",
@@ -19,6 +18,9 @@
     "@tsconfig/node22": "^22.0.5",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.0",
+    "nodemon": "^3.1.11",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
