--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,13 +17,9 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - DB_HOST=db
-      - DB_USER=postgres
-      - DB_PASSWORD=postgres
-      - DB_NAME=forumdb
+      - DATABASE_URL=postgresql://postgres:postgrespass@db:5432/forumdb?schema=public
     volumes:
-      - ./server:/app
-      - /app/node_modules
+      - ./server/src:/app/src
     depends_on:
       - db
 
@@ -32,7 +28,7 @@ services:
     restart: always
     environment:
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_PASSWORD=postgrespass
       - POSTGRES_DB=forumdb
     ports:
       - "5432:5432"
