--- a/server/package.json
+++ b/server/package.json
@@ -5,23 +5,33 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --poll --transpile-only src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "prisma:generate": "prisma generate --config prisma.config.ts",
+    "prisma:migrate": "prisma migrate dev --config prisma.config.ts",
+    "prisma:studio": "prisma studio --config prisma.config.ts",
+    "prisma:push": "prisma db push --config prisma.config.ts"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "pg": "^8.16.3"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.5",
     "@types/express": "^5.0.6",
-    "@types/node": "^25.0.0",
+    "@types/node": "^25.0.1",
+    "@types/pg": "^8.16.0",
     "nodemon": "^3.1.11",
+    "prisma": "^7.1.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
-  }
+  },
+  "type": "module"
 }
