--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,8 @@ services:
     environment:
       - DATABASE_URL=postgresql://postgres:postgrespass@db:5432/forumdb?schema=public
     volumes:
-      - ./server/src:/app/src
+      - ./server:/app
+      - /app/node_modules
     depends_on:
       - db
 
