--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,14 +1,12 @@
 {
   "extends": "@tsconfig/node22/tsconfig.json",
   "compilerOptions": {
-    "module": "ESNext",
-    "moduleResolution": "node",
     "outDir": "dist",
     "rootDir": "src",
     "target": "ES2023",
     "strict": true,
     "esModuleInterop": true,
-    "ignoreDeprecations": "6.0"
+    //"ignoreDeprecations": "6.0"
 
   },
   "include": ["src/**/*.ts"],
