--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,6 +7,7 @@
     "strict": true,
     "esModuleInterop": true,
     //"ignoreDeprecations": "6.0"
+    "typeRoots": ["./src/types", "./node_modules/@types"]
 
   },
   "include": ["src/**/*.ts"],
